# pmagent

./: .dockerignore  .gitignore  Dockerfile  manage.py  nginx.conf  pmagent_fe.code-workspace  pyproject.toml  requirements.txt
domains/im/: apps.py  models.py
domains/im/migrations/: 0001_initial.py
domains/infra/: django_ninja_utils.py
domains/llm/: apps.py  models.py
domains/llm/migrations/: 0001_initial.py
service_pmagent/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
service_pmagent/admins/: im.py
service_pmagent/apis/: im.py  user.py
service_pmagent/html/: README.md  package.json  pnpm-lock.yaml
service_pmagent/html/src/router/: index.ts
service_pmagent/html/src/views/: ChatroomView.vue
service_pmagent/interfaces/http/: llm.py
service_pmagent/wss/: chat.py
